<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="loading_message">Saving trees..</string>
    <string name="app_name">Airborne Infection Control</string>
    <string name="action_settings">Settings</string>
    <string name="use_secure">Use SSL/TLS</string>
    <string name="loading_message_fetching_metadata">Fetching Metadata...</string>
    <string name="loading_message_signing_in">Signing in..</string>
    <string name="loading_message_saving_trees">Saving trees..</string>
    <string name="loading_message_saving_form">Saving form...</string>
    <string name="fetch_from_server">Fetching data from server...</string>
    <string name="goto_first">&lt;&lt;</string>
    <string name="goto_last">>></string>
    <string name="goto_next">Next</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="exit">Exit</string>
    <string name="logout">Log out</string>
    <string name="form_date">Form Date</string>
    <string name="send">Send</string>
    
    <string name="main_menu">Main Menu</string>
    <string name="installation">Installation</string>
    <string name="maintenance">Maintenance</string>
    <string name="troubleshooting_log">Troubleshooting Log</string>
    <string name="troubleshooting_status">Troubleshooting Status</string>
    <string name="troubleshooting_status_update">Troubleshooting Status Update</string>
    <string name="troubleshooting_resolution">Troubleshooting Resolution</string>
    
    <string name="uvgi_lights">UVGI Lights</string>
    
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="verify">Verify</string>
    <string name="unique_id_hint">Enter 9-14 character unique Id</string>
    
    <string name="location_setup">Location Setup</string>
    <string name="update_metadata">Update Metadata</string>
    
    
    <string name="report_menu">Report Menu</string>
    <string name="child_info">Child Information and Vitals</string>
    <string name="forms_a">"Infant less than 2 months"</string>
    <string name="forms_b">" Child between  2m - 5yrs "</string>
    <string name="menu_a">"Infant less than 2 months"</string>
    <string name="menu_b">"Child between 2m - 5yrs"</string>
    <string name="screening_a">Screening Form</string>
    <string name="treatments">Treatment</string>
    <string name="sec_screening_a">Sec. Screening Form</string>
    <string name="followup_a">Followup Form</string>
    <string name="treatment_a">Treatment Form</string>
    <string name="referral_completion">Referral Completion</string>
    <string name="reports">Reports</string>
    <string name="referral_status">Referrals Status</string>
    <string name="reverse_referral">Reverse Referrals</string>
     
    <string name="feedback_form">Feedback</string>
    <string name="age_in_months">ageInMonths</string>
    
    <string name="separator">" - "</string>
    
    <string name="saved_forms">Saved Forms</string>
    
    <string name="classification">Classification(s)\n</string>
    
    <string name="language_change">Language Change</string>
    
    <string name="referral_completed">Referral Completed</string>
    
    <string name="empty_string">""</string>
    
    <string name="text_copied">Patient ID copied..</string>
    
     <string name="child_search">Child Search</string>
    
    <string name="about_us">About us</string>
    
    <string name="about">An innovation by &lt;font color=#005166&gt; Interactive Research and Development &lt;/font&gt; &lt;br&gt; &lt;br&gt; 
       	&lt;b&gt; Collaborators: &lt;/b&gt; &lt;br&gt; 
        Policy and Strategic Planning Unit, Health Department Punjab, Pakistan.  &lt;br&gt; 
        Interactive Health Solutions &lt;br&gt; 
        Development Strategies &lt;br&gt; &lt;br&gt; 
        
        Funded by &lt;font color=#005166&gt; Palladium Group Inc. &lt;/font&gt; &lt;br&gt; </string>
        
    <string name="search_again">Search Again</string>
    <string name="search_children">Search Children</string>
    
    <string name="search_name">Name</string>
    <string name="name_hint">Enter name</string>
    
    <string name="important">Important!</string>
    
    <string name="performance_report">Performance Report</string>
    
</resources>
