<?xml version="1.0" encoding="UTF-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+template_id/TableLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/honey_dew">

    <android.support.v4.view.ViewPager
        android:id="@+template_id/pager"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="0.5"
        android:scrollbarFadeDuration="0">
    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+template_id/navigatorLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            
            <Button
                android:id="@+template_id/first_button"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.06"
                android:text="@string/goto_first"
                android:textAppearance="@style/text" />

            <SeekBar
                android:id="@+template_id/navigationSeekbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:max="9"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:progress="0" />

            <Button
                android:id="@+template_id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.06"
                android:text="@string/goto_next" />

            <Button
                android:id="@+template_id/last_button"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="0.06"
                android:text="@string/goto_last"
                android:textAppearance="@style/text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+template_id/buttonsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <Button
                android:id="@+template_id/clearButton"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/clear" />

           <Button
               android:id="@+template_id/pageCount"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="0.5"
               android:text="0/0"
               android:focusable="false"
               android:focusableInTouchMode="false"
               android:clickable="false" />

           <Button
               android:id="@+template_id/saveButton"
               style="@style/button"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="2"
               android:text="@string/save" />

        </LinearLayout>
    </LinearLayout>

</TableLayout>